--- a/GeeksNearby-mobile/www/css/style.less
+++ b/GeeksNearby-mobile/www/css/style.less
@@ -32,7 +32,7 @@ div.ui-content.absolute {
 }
 
 div.ui-content.absolute:not(:last-child) {
-    bottom: 40px;
+    bottom: 60px;
 }
 
 div.ui-footer.absolute {
@@ -69,4 +69,13 @@ div.ui-footer.absolute {
     top: 0;
     width: 80px;
     height: 80px;
+}
+
+#lstUsersNearby a {
+    padding-left: 90px;
+    padding-right: 33px;
+}
+
+#lstUsersNearby p.ui-li-aside {
+    width: 40%;
 }
