--- a/GeeksNearby-mobile/www/css/style.less
+++ b/GeeksNearby-mobile/www/css/style.less
@@ -31,7 +31,7 @@ div.ui-content.absolute {
     right: 0;
 }
 
-div.ui-content.absolute:not(:last-child) {
+div.ui-content.absolute.with-bottom-bar {
     bottom: 63px;
 }
 
