--- a/GeeksNearby-mobile/android/res/xml/config.xml
+++ b/GeeksNearby-mobile/android/res/xml/config.xml
@@ -17,22 +17,44 @@
        specific language governing permissions and limitations
        under the License.
 -->
+<cordova>
+    <!--
+    access elements control the Android whitelist.
+    Domains are assumed blocked unless set otherwise
+     -->
+
+    <access origin="http://127.0.0.1*"/> <!-- allow local pages -->
+	<access origin="http://api.parse.com"/>
+	<access origin="http://files.parse.com"/>
+	<access origin="http://api.geeksnearby.com"/>
+	<access origin="http://linkedin.com"/>
+	<access origin="http://facebook.com"/>
+	<access origin="http://twitter.com"/>
+
+    <!-- <access origin="https://example.com" /> allow any secure requests to example.com -->
+    <!-- <access origin="https://example.com" subdomains="true" /> such as above, but including subdomains, such as www -->
+    <!-- <access origin=".*"/> Allow all domains, suggested development use only -->
+
+    <log level="DEBUG"/>
+    <preference name="useBrowserHistory" value="false" />
 <plugins>
     <plugin name="App" value="org.apache.cordova.App"/>
     <plugin name="Geolocation" value="org.apache.cordova.GeoBroker"/>
     <plugin name="Device" value="org.apache.cordova.Device"/>
-    <plugin name="Accelerometer" value="org.apache.cordova.AccelListener"/>
-    <plugin name="Compass" value="org.apache.cordova.CompassListener"/>
-    <plugin name="Media" value="org.apache.cordova.AudioHandler"/>
+    <!-- <plugin name="Accelerometer" value="org.apache.cordova.AccelListener"/> -->
+    <!-- <plugin name="Compass" value="org.apache.cordova.CompassListener"/> -->
+    <!-- <plugin name="Media" value="org.apache.cordova.AudioHandler"/> -->
     <plugin name="Camera" value="org.apache.cordova.CameraLauncher"/>
     <plugin name="Contacts" value="org.apache.cordova.ContactManager"/>
     <plugin name="File" value="org.apache.cordova.FileUtils"/>
     <plugin name="NetworkStatus" value="org.apache.cordova.NetworkManager"/>
     <plugin name="Notification" value="org.apache.cordova.Notification"/>
     <plugin name="Storage" value="org.apache.cordova.Storage"/>
-    <plugin name="Temperature" value="org.apache.cordova.TempListener"/>
+    <!-- <plugin name="Temperature" value="org.apache.cordova.TempListener"/> -->
     <plugin name="FileTransfer" value="org.apache.cordova.FileTransfer"/>
-    <plugin name="Capture" value="org.apache.cordova.Capture"/>
-    <plugin name="Battery" value="org.apache.cordova.BatteryListener"/>
+    <!-- <plugin name="Capture" value="org.apache.cordova.Capture"/> -->
+    <!-- <plugin name="Battery" value="org.apache.cordova.BatteryListener"/> -->
     <plugin name="SplashScreen" value="org.apache.cordova.SplashScreen"/>
 </plugins>
+</cordova>
+
